# csc305-2023

./: LICENSE  README.md
barest/: Cargo.toml
barest/.cargo/: config
barest/src/: main.rs
hello_world/: Cargo.toml
hello_world/hello_world_lib/: Cargo.toml
hello_world/hello_world_lib/src/: lib.rs
hello_world/src/: greetings.rs  how_you_hold_data_for_operations.rs  main.rs
hello_world/src/greetings/: french.rs  spanish.rs
hello_world/src/how_you_hold_data_for_operations/: derived.rs  primitives.rs
hello_world/src/how_you_hold_data_for_operations/derived/: user_defined.rs
hello_world/src/how_you_hold_data_for_operations/primitives/: compound_types.rs  scalar_types.rs
hello_world/src/how_you_hold_data_for_operations/primitives/compound_types/: array.rs
hello_world/src/how_you_hold_data_for_operations/primitives/scalar_types/: literals.rs
os_with_bootloader/: Cargo.toml  build.rs
os_with_bootloader/.cargo/: config.toml
os_with_bootloader/kernel_with_bootloader/: Cargo.toml  writer.rs
os_with_bootloader/kernel_with_bootloader/src/: main.rs
os_with_bootloader/kernel_with_bootloader/src/writer/: constants.rs
rect_shape/: Cargo.toml
rect_shape/rect_shape_derive/: Cargo.toml
rect_shape/rect_shape_derive/src/: lib.rs
rect_shape/src/: lib.rs
rust_by_example/src/: main.rs  primitive_types.rs
rust_by_example/src/primitive_types/: literals.rs  primitives.rs  tuples.rs
